Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 6.0.0-beta1, Qt Creator 6.0.0-beta2
-
-
f16589f96991d3801d2ec0a0068b5b231e1570fe (qt-creator/qt-creator/6.0)
Description
Reproduction steps:
- "Tools" -> "Options" -> "Environment" -> "Interface"
- Change Theme
- Press "Apply" and "Restart now"
Misbehavior:
- Qt doesn't restart
Expected behavior:
- Qt restarts
Note:
After pressing "Ok" works correctly.
Attachments
Issue Links
- clones
-
QTCREATORBUG-26279 "Restart now" doesn't restart Qt Creator
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-26525 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
380181,3 | Fix that Restart Now might not close Qt Creator | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |